fixed jumping scrollbar

--- a/_src/css/_main.scss
+++ b/_src/css/_main.scss
@@ -34,6 +34,15 @@ main {
   }
 }
 
+// Avoid "jumping" scrollbar
+// https://aykevl.nl/2014/09/fix-jumping-scrollbar
+@include media-breakpoint-up(sm) {
+  html {
+        margin-left: calc(100vw - 100%);
+        margin-right: 0;
+  }
+}
+
 // ===========================
 // HEADERS
 
